--- a/read_qei/src/mainwindow.ui
+++ b/read_qei/src/mainwindow.ui
@@ -23,6 +23,9 @@
       <height>61</height>
      </rect>
     </property>
+    <property name="digitCount">
+     <number>9</number>
+    </property>
     <property name="intValue" stdset="0">
      <number>105</number>
     </property>
@@ -35,6 +38,21 @@
       <width>261</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <double>360.000000000000000</double>
+    </property>
+    <property name="tracking">
+     <bool>true</bool>
+    </property>
+    <property name="inverted">
+     <bool>true</bool>
+    </property>
+    <property name="updateInterval">
+     <number>50</number>
+    </property>
+    <property name="tickCount">
+     <number>30</number>
     </property>
    </widget>
    <widget class="QwtWheel" name="Wheel_2">
@@ -49,6 +67,18 @@
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
+    <property name="maximum">
+     <double>360.000000000000000</double>
+    </property>
+    <property name="tracking">
+     <bool>true</bool>
+    </property>
+    <property name="inverted">
+     <bool>true</bool>
+    </property>
+    <property name="tickCount">
+     <number>30</number>
+    </property>
    </widget>
    <widget class="QwtWheel" name="Wheel_3">
     <property name="geometry">
@@ -58,6 +88,15 @@
       <width>261</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <double>360.000000000000000</double>
+    </property>
+    <property name="tracking">
+     <bool>true</bool>
+    </property>
+    <property name="tickCount">
+     <number>30</number>
     </property>
    </widget>
    <widget class="QwtWheel" name="Wheel_4">
@@ -72,6 +111,18 @@
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
+    <property name="value">
+     <double>0.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>360.000000000000000</double>
+    </property>
+    <property name="tracking">
+     <bool>true</bool>
+    </property>
+    <property name="tickCount">
+     <number>30</number>
+    </property>
    </widget>
    <widget class="QLCDNumber" name="lcdNumber_2">
     <property name="geometry">
@@ -81,6 +132,9 @@
       <width>261</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="digitCount">
+     <number>9</number>
     </property>
     <property name="intValue" stdset="0">
      <number>105</number>
@@ -95,6 +149,9 @@
       <height>61</height>
      </rect>
     </property>
+    <property name="digitCount">
+     <number>9</number>
+    </property>
     <property name="intValue" stdset="0">
      <number>105</number>
     </property>
@@ -108,6 +165,12 @@
       <height>61</height>
      </rect>
     </property>
+    <property name="smallDecimalPoint">
+     <bool>false</bool>
+    </property>
+    <property name="digitCount">
+     <number>9</number>
+    </property>
     <property name="intValue" stdset="0">
      <number>105</number>
     </property>
@@ -115,14 +178,21 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>290</y>
-      <width>101</width>
-      <height>91</height>
+      <x>270</x>
+      <y>240</y>
+      <width>211</width>
+      <height>211</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+      <italic>false</italic>
+      <underline>false</underline>
+     </font>
+    </property>
     <property name="text">
-     <string>Proceed</string>
+     <string>ROSノード開始</string>
     </property>
    </widget>
   </widget>
